# Ai-Frontier

./: .clang-format  .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
backend/: CMakeLists.txt  backend.h
backend/common/: backend_common.h
backend/config/: simple_yaml.cpp
backend/native/: default_worker_module.cpp  native_worker_context.h  native_worker_main.cpp  native_worker_module.h  native_worker_runtime.cpp  native_worker_runtime.h
backend/runtime/: backend_console.cpp  backend_core.cpp  backend_diagnostics.cpp  backend_generate.cpp  backend_process.cpp  backend_server.cpp  backend_server_metrics.cpp  backend_state.cpp
configs/: default.yaml
critic_model/: critic.py
dashboard/: CMakeLists.txt  backend_main.cpp
dashboard/common/: backend_common.h
dashboard/config/: simple_yaml.h
dashboard/http/: simple_http_server.cpp  simple_http_server.h
dashboard/runtime/: backend_diagnostics.cpp
dashboard_qml/: CMakeLists.txt
dashboard_qml/shaders/: frosted_glass.frag
dashboard_qml/src/: backend_main.cpp  main.cpp
dashboard_qml/src/app/: ApiClient.cpp  AppController.cpp  AppController.h
dashboard_qml/src/qml/: main.qml
dashboard_qml/src/qml/components/: AmbientBackdrop.qml  GlassActionButton.qml  GlassStatTile.qml  GlowCard.qml  GradientProgressBar.qml  NavButton.qml  PageIntro.qml  SectionHeader.qml  SidebarNav.qml  StatusIndicator.qml  ToastNotification.qml  TrendChartWidget.qml
dashboard_qml/src/qml/pages/: ChatPage.qml  DataPage.qml  DiagnosticsPage.qml  JobsPage.qml  LiveFeedPage.qml  MetricsPage.qml  OverviewPage.qml  ReportsPage.qml
dashboard_qml/src/qml/pages/jobs/: JobWorkflowCard.qml
dashboard_qml/src/util/: Formatters.h
dashboard_qt_cpp/src/: main.cpp
dashboard_qt_cpp/src/pages/: BasePage.h  ChatPage.cpp  ChatPage.h  DiagnosticsPage.h  MetricsPage.cpp  MetricsPage.h  ReportsPage.h  SettingsPage.cpp  SettingsPage.h
dashboard_qt_cpp/src/style/: StyleEngine.cpp  StyleEngine.h
dashboard_qt_cpp/src/widgets/: DataSplitBar.h  GlowCard.cpp  GradientProgressBar.cpp  HeroMetricCard.cpp  HeroMetricCard.h  IconBadge.h  PillBadge.h  ResourceBar.cpp  ResourceBar.h  trend_chart_widget.cpp
dashboard_qt_cpp_v2/: .gitignore  CMakeLists.txt
dashboard_qt_cpp_v2/shaders/: pass.vert
dashboard_qt_cpp_v2/src/app/: ApiClient.h
dashboard_qt_cpp_v2/src/qml/: main.qml
dashboard_qt_cpp_v2/src/qml/components/: AppTheme.qml  DataSplitBar.qml  FlatTag.qml  GlassActionButton.qml  GlassPanel.qml  GlassStatTile.qml  GlowCard.qml  HeroMetricCard.qml  IconBadge.qml  PageIntro.qml  PillBadge.qml  ResourceBar.qml  SectionHeader.qml  SidebarNav.qml  StatusIndicator.qml
dashboard_qt_cpp_v2/src/qml/pages/: ChatPage.qml  DataPage.qml  DiagnosticsPage.qml  JobsPage.qml  MetricsPage.qml  OverviewPage.qml  ReportsPage.qml  SettingsPage.qml
dashboard_qt_cpp_v2/src/qml/pages/diagnostics/: DiagnosticsHealthRow.qml  DiagnosticsIssueCard.qml
dashboard_qt_cpp_v2/src/qml/pages/jobs/: JobWorkflowCard.qml
dashboard_widgets/: CMakeLists.txt
dashboard_widgets/src/app/: ApiClient.cpp  ApiClient.h  DashboardWindow.h  DashboardWindowEvents.cpp  DashboardWindowShell.cpp
dashboard_widgets/src/pages/: BasePage.cpp  DataPage.cpp  DataPage.h  DiagnosticsPage.cpp  JobsPage.cpp  JobsPage.h  LiveFeedPage.cpp  LiveFeedPage.h  OverviewPage.cpp  OverviewPage.h  ReportsPage.cpp
dashboard_widgets/src/style/: Colors.h
dashboard_widgets/src/util/: Helpers.h
dashboard_widgets/src/widgets/: DataSplitBar.cpp  GlowCard.h  GradientProgressBar.h  IconBadge.cpp  PillBadge.cpp  StatusIndicator.cpp  StatusIndicator.h  trend_chart_widget.h
dataset_pipeline/: build_dataset.py
evaluation/: evaluate.py
frontier/: __init__.py  cache.py  config.py  data.py  hardware.py  judging.py  model_management.py  modeling.py  optim.py  utils.py
inference/: server.py
rl_training/: rl_loop.py
scripts/: launcher.py
tests/: conftest.py  test_config.py  test_inference_server.py  test_launcher.py  test_model_management.py  test_utils.py
training/: train_system.py
